[gd_scene load_steps=3 format=3 uid="uid://er5nhd3nqjk0"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_e4vx7"]
[ext_resource type="Texture2D" uid="uid://ceogafq0o2lhx" path="res://Assets/JungleBG.png" id="2_y2lk7"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 21.0
offset_right = 60.0
offset_bottom = 21.0
scale = Vector2(2.45953, 3.31021)
script = ExtResource("1_e4vx7")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -24.8015
offset_top = -6.6461
offset_right = 15.1985
offset_bottom = 33.3539
scale = Vector2(10.9974, 18.1422)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_y2lk7")
expand_mode = 1
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 60.5807
offset_top = 51.0541
offset_right = 1059.58
offset_bottom = 278.054
scale = Vector2(0.288854, 0.255985)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_font_sizes/font_size = 166
text = "GAME OVER!"

[node name="FinalScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0744
offset_top = 119.328
offset_right = 320.074
offset_bottom = 169.328
scale = Vector2(0.908834, 0.945609)
theme_override_colors/font_color = Color(1, 0.94902, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 36
text = "Final Score: 0"

[node name="FruitStatsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 61.3939
offset_top = 192.435
offset_right = 651.394
offset_bottom = 612.435
scale = Vector2(0.458341, 0.312192)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 101
text = "apple: 0
raspberry: 0
decayed: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 124.821
offset_top = 376.411
offset_right = 370.821
offset_bottom = 434.411
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 36
text = "Restart Game"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="MainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 145.556
offset_top = 416.589
offset_right = 324.556
offset_bottom = 468.589
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 31
text = "Main Menu"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
